<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/text_carroNome"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nomeCarro"
        android:padding="10dp"
        android:background="@color/backgroundColorInput"
        android:id="@+id/edtNomeCarro"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/text_kmPercorrida"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_kmPercorrida"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:background="@color/backgroundColorInput"
        android:id="@+id/edtKmPercorrida"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/text_qtdCombustivel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_qtdCombustivel"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:background="@color/backgroundColorInput"
        android:id="@+id/edtQtdCombustivel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_calcular"
            android:background="@color/colorOrangePrimary"
            android:onClick="calcular"
            android:id="@+id/btnCalcular"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/text_limparDados"
            android:background="@color/colorGreyPrimary"
            android:onClick="limparDados"
            android:id="@+id/btnLimparDados"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            android:text="@string/text_consumoMedioFrota"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            android:id="@+id/tvConsumoMedioFrota"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:id="@+id/layoutTabelaCarros">


    </LinearLayout>



</LinearLayout>